--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,7 +87,7 @@
   height: 100px;
   background: url('../img/misc/mouse-hover.png') no-repeat center;
   background-size: contain;
-  transform: translate(-50%, -50%) scale(1.2);
+  transform: translate(-50%, -50%);
 }
 
 /* Click state */
@@ -811,25 +811,14 @@ h6 {
   inset: 0;
   z-index: 999999;
   overflow: hidden;
-  background: var(--background-color);
+  background: var(--default-black);
   transition: all 0.6s ease-out;
-
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#preloader::before {
-  content: "";
-  width: 300px;
-  /* Adjust size as needed */
-  height: 300px;
-  /* Adjust size as needed */
-  background-image: url('../img/abstract/happy-girl.gif');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
+/* Remove the old GIF background - now using Lottie player directly in HTML */
 
 /* #preloader:before {
   content: "";
@@ -3579,7 +3568,7 @@ section,
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: var(--default-pink);
+  background-color: transparent;
 }
 
 .pricing .plan-header-consultancy .plan-icon i {
@@ -3588,8 +3577,9 @@ section,
 }
 
 .pricing .plan-header-consultancy .plan-icon img {
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 18rem;
+  height: 18rem;
+  margin-top: 5rem;
   object-fit: contain;
 }
 
@@ -3597,6 +3587,7 @@ section,
   font-size: 34px;
   font-weight: 700;
   margin-bottom: 10px;
+  margin-top: 5rem;
   color: var(--default-lemon);
 }
 
@@ -3729,8 +3720,8 @@ section,
   position: absolute;
   top: 20px;
   right: -35px;
-  background-color: var(--default-pink);
-  color: var(--default-pink);
+  background-color: transparent;
+  color: transparent;
   font-size: 13px;
   font-weight: 600;
   padding: 8px 40px;
@@ -3750,7 +3741,7 @@ section,
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: var(--default-green);
+  background-color: transparent;
 }
 
 .pricing .plan-header-onetime .plan-icon i {
@@ -3759,15 +3750,17 @@ section,
 }
 
 .pricing .plan-header-onetime .plan-icon img {
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 18rem;
+  height: 18rem;
   object-fit: contain;
+  margin-top: 5rem;
   color: var(--default-black);
 }
 
 .pricing .plan-header-onetime h3 {
   font-size: 34px;
   font-weight: 700;
+  margin-top: 5rem;
   margin-bottom: 10px;
   color: var(--default-beige);
 }
@@ -3922,8 +3915,9 @@ section,
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 2.5rem;
   border-radius: 50%;
-  background-color: var(--default-black);
+  background-color: transparent;
 }
 
 .pricing .plan-header-subscription .plan-icon i {
@@ -3932,13 +3926,14 @@ section,
 }
 
 .pricing .plan-header-subscription .plan-icon img {
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 18rem;
+  height: 18rem;
   object-fit: contain;
 }
 
 .pricing .plan-header-subscription h3 {
   font-size: 34px;
+  margin-top: 3rem;
   font-weight: 700;
   margin-bottom: 10px;
   color: var(--default-black);
